<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditAlumnoActivity">

<TextView
android:id="@+id/textView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:gravity="center"
android:text="@string/etiqueta"
android:textSize="24sp"
android:textStyle="bold" />

<EditText
android:id="@+id/txtNombreEditAlumno"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:ems="10"
android:hint="@string/nombre"
android:inputType="text" />

<EditText
android:id="@+id/txtApellidosEditAlumno"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:ems="10"
android:hint="@string/apellidos"
android:inputType="text" />

<Spinner
android:id="@+id/spCiclosEditAlumno"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:entries="@array/spciclos" />

<RadioGroup
android:id="@+id/rgGrupoEditAlumno"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:gravity="center"
android:orientation="horizontal">

<RadioButton
    android:id="@+id/rbGrupoAEditAlumno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:text="@string/grupoa" />

<RadioButton
    android:id="@+id/rbGrupoBEditAlumno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:text="@string/grupob" />

<RadioButton
    android:id="@+id/rbGrupoCEdditAlumno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:text="@string/grupoc" />

</RadioGroup>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:orientation="horizontal">

    <Button
        android:id="@+id/btnEliminarEditAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/eliminar" />

    <Button
        android:id="@+id/btnEditAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/editar" />
</LinearLayout>

    </LinearLayout>